# dtree

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  setup.sh
benchmarks/: CMakeLists.txt  algo_benchmarks.cpp  cutterBenchmarks.cpp  impurityMeasuresBenchmarks.cpp  impurity_measures_benchmarks.cpp  splitter_benchmarks.cpp  treeBuilderBenchmarks.cpp  tree_builder_benchmarks.cpp
include/dtree/: concepts.h  cutters.h  features.h  flat_tree.h  helpers.h  impurityMeasures.h  impurity_measures.h  index_splitter.h  labels.h  optimalTreeBuilder.h  serialization.h  splitter.h  splittings.h  stop_condition.h  stoppingCondition.h  tree.h  treeBuilder.h  treePrinter.h  tree_builder.h  types.h  utility.h
include/dtree/algos/: cost_utils.h  median_split.h  mixed_algo.h  multi_numeric.h  optimal_split.h  roh_split.h  single_numeric.h  strings.h  types.h
include/dtree/detail/: cuttingAlgorithms.h
src/: CMakeLists.txt  impurityMeasures.cpp  impurity_measures.cpp  labels.cpp  stop_condition.cpp  stoppingCondition.cpp  treePrinter.cpp
src/algos/: multi_numeric.cpp  roh_split.cpp
test/: CMakeLists.txt  algos_single_numeric_tests.cpp  features_tests.cpp  flat_tree_tests.cpp  impurityMeasureTests.cpp  impurity_measures_tests.cpp  serialization_tests.cpp  splittings_tests.cpp  treeBuilderTests.cpp  tree_builder_tests.cpp
